<resources>
    <string name="app_name">FirstApp</string>
    <string name="one">picture</string>
    <string name="happy_birthday">happy birthday!</string>
    <string name="name">Yours LiHua</string>
    <string name="next" translatable="false">next</string>
    <string name="hello_first_fragment" translatable="false">hello_first_fragment</string>
    <string name="action_settings" translatable="false">action_settings</string>
    <string name="first_fragment_label" translatable="false">first_fragment_label</string>
    <string name="second_fragment_label" translatable="false">second_fragment_label</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="name2">Dear Huahua:</string>
    <string name="result">result:</string>
    <string name="btnToF">"Celsius to Fahrenheit "</string>
    <string name="inputTemp">Enter the temperature</string>
    <string name="tempC">℃</string>
    <string name="tempF">℉</string>
    <string name="btn_dollar">Dollar</string>
    <string name="hing_rmb">input rmb</string>
    <string name="btn_euro">Euro</string>
    <string name="btn_won">Won</string>
    <string name="btn_open">config</string>
    <string name="btn_sava">sava</string>
    <string name="title_activity_my_list2">MyList2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    \

</resources>
