<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tempC"
            android:layout_width="285dp"
            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="@string/inputTemp"
            android:inputType="numberSigned|number|text|numberDecimal"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_tempC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/tempC"
            android:textSize="32sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_CToF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="CToF"
        android:text="@string/btnToF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tempF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/result" />
</LinearLayout>